# mocvxpy

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: acopf_ieee9.py  boqp_with_linear_constraints.py  boqp_with_linear_constraints_parallel.py  circle_pb.py  circle_pb_parallel.py  ellipsoid_pb.py  ellipsoid_pb_parallel.py  example1.py  example1_parallel.py  example2.py  example2_parallel.py  example3.py  example3_parallel.py  example4.py  example5.py  example5_parallel.py  example6.py  example6_parallel.py  example7.py  example7_parallel.py  example8.py  example8_parallel.py  example9.py  l1norm_with_qp_constraints.py  moqcqp.py  moqcqp_parallel.py  moqp_with_linear_constraints.py  moqp_with_linear_constraints_parallel.py  portfolio_allocation.py  power_of_four_with_qp_constraints.py  power_of_four_with_qp_constraints_parallel.py  unbounded.py  vo_ellipsoid_pb.py  vo_ellipsoid_pb_parallel.py
mocvxpy/: __init__.py  constants.py
mocvxpy/expressions/: order_cone.py  variable.py
mocvxpy/problems/: problem.py  utilities.py
mocvxpy/solvers/: common.py  defines.py  local_bound_set.py  monmo_solver.py  movs_solver.py  solution.py  utilities.py
mocvxpy/solvers/parallel/: monmopar_solver.py  movspar_solver.py
mocvxpy/solvers/sequential/: adena_solver.py  monmo_solver.py  movs_solver.py
mocvxpy/subproblems/: norm_min.py  one_objective.py  pascoletti_serafini.py  subproblem.py  weighted_sum.py
mocvxpy/tests/: __init__.py  config_dask_client.py  test_adena_mo_biobjective.py  test_adena_mo_triobjective.py  test_monmo_mo_biobjective.py  test_monmo_mo_triobjective.py  test_monmo_vo_biobjective.py  test_monmo_vo_triobjective.py  test_movs_mo_biobjective.py  test_movs_mo_triobjective.py  test_movs_vo_biobjective.py  test_movs_vo_triobjective.py  test_parallel_monmo_mo_biobjective.py  test_parallel_monmo_mo_triobjective.py  test_parallel_monmo_vo_biobjective.py  test_parallel_monmo_vo_triobjective.py  test_parallel_movs_mo_biobjective.py  test_parallel_movs_mo_triobjective.py  test_parallel_movs_vo_biobjective.py  test_parallel_movs_vo_triobjective.py
mocvxpy/utilities/: polyhedron.py
