[project]
name = "mocvxpy"
version = "0.1.0"
description = "A CVXPY-based library for modeling multiobjective convex problems in Python"
readme = "README.md"
license = "Apache-2.0"
authors = [{name = "Ludovic Salomon", email = "ludovic.salomon@polymtl.ca"},
           {name = "Daniel Dörfler", email = "daniel.doerfler@uni-jena.de"},
           {name = "Andreas Löhne", email = "andreas.loehne@uni-jena.de"}]
classifiers=[
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Topic :: Modeling",
  "Topic :: Scientific/Engineering",
  "Topic :: Mathematics",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
]
requires-python = ">=3.12"
dependencies = [
    "cvxpy>=1.8.0",
    "dask>=2026.1.0",
    "distributed>=2026.1.0",
    "numpy>=2.3.0",
    "ppprint>=0.1.0",
    "pycddlib>=3.0.2",
]

[project.optional-dependencies]
examples = [
    "matplotlib>=3.10.1",
    "pandas>=2.3.3",
]
tests = [
    "black>=26.1.0",
    "pytest>=9.0",
]

[build-system]
requires = ["setuptools >= 80.7.1"]
build-backend = "setuptools.build_meta"
